# spiritual-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/agents/: core_agent.py  lives_of_the_saints_agent.py  saints_agent.py
app/rag/: lives_of_the_saints_rag.py  lives_of_the_saints_scraper.py  saints_rag.py  saints_scraper.py
app/utils/: embedding_utils.py
