[tool.poetry]
name = "spiritual-agent"
version = "0.1.0"
description = "AI Orthodox Spritual Father"
authors = ["Ivan Penev <ivan.penev@berkeley.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.17"
langchain-openai = "^0.1.25"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spiritual-agent = "spiritual_agent.main:main"
